--- a/Style.css
+++ b/Style.css
@@ -35,4 +35,38 @@ body * {
     line-height: 24px;
     margin-top: 8px;
 }
+
+/* links */
+ul {
+    list-style: none;
+
+    display: flex;
+    flex-direction: column;
+    gap: 16px; 
+
+    
+    
+}
+
+ul li a{
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    padding: 16px  24px;
+
+    border-radius: 8px;
+    border: 1px solid var(--stroke-color-dark-mode, rgba(255, 255, 255, 0.50));
+    background: var(--surface-color-dark-mode, rgba(255, 255, 255, 0.10));
+
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+
+    text-decoration: none;
+    font-weight: 500;
+
+    
+    
+}
  
