--- a/Style.css
+++ b/Style.css
@@ -4,13 +4,17 @@
     box-sizing: 0;
 }
 
+:root{
+    --text-color: White;
+}
+
 body{
     background: url(./assets/bg-mobile.jpg) no-repeat top center/cover;
 }
 
 body * {
     font-family: 'Inter', sans-serif;
-    color: #ffffff; 
+    color: var(--text-color); 
 }
 
 #container{
@@ -44,6 +48,8 @@ ul {
     flex-direction: column;
     gap: 16px; 
 
+    padding: 24px 0;
+
     
     
 }
@@ -65,16 +71,47 @@ ul li a{
 
     text-decoration: none;
     font-weight: 500;
-    transition: background .2s;
+    transition: background 0.2s;
 }
 
 /* pseudo-selector*/
 
 ul li a:hover {
     background: rgba (255, 255, 255, 5.05);
-    border: 1.5px solid white;
+    border: 1.5px solid var(--text-color);
 }
 
 
+/* social links */
+#social-links {
+    display: flex;
+    justify-content: center;
+
+    padding: 24px;
+
+    font-size: 24px; 
+}
+
+#social-links a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 16px;
+
+    transition: background 0.2s;
+    border-radius: 50%;
+}
+
+#social-links a:hover {
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 50%;
+}
+
+footer {
+    padding: 24px 0;
+    text-align: center;
+    font-size: 14px;
+  
+}
 
  
