--- a/Style.css
+++ b/Style.css
@@ -1,15 +1,24 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: 0;
+    box-sizing: border-box;
 }
 
-:root{
+:root {
     --text-color: White;
+    --bg-url: url(./assets/bg-mobile.jpg)
+    --stroke-color:  rgba(255, 255, 255, 0.50)
+}
+
+.light {
+    --text-color: black;
+    --bg-url: url(./assets/bg-mobile-light.jpg);
+    --stroke-color:  rgba(0, 0, 0, 0.5);
+    
 }
 
 body{
-    background: url(./assets/bg-mobile.jpg) no-repeat top center/cover;
+    background: var(--bg-url) no-repeat top center/cover;
 }
 
 body * {
@@ -77,7 +86,7 @@ ul li a{
 /* pseudo-selector*/
 
 ul li a:hover {
-    background: rgba (255, 255, 255, 5.05);
+    background: rgba(255, 255, 255, 5.05);
     border: 1.5px solid var(--text-color);
 }
 
