--- a/Style.css
+++ b/Style.css
@@ -6,14 +6,23 @@
 
 :root {
     --text-color: White;
-    --bg-url: url(./assets/bg-mobile.jpg)
-    --stroke-color:  rgba(255, 255, 255, 0.50)
+    --bg-url: url(./assets/bg-mobile.jpg);
+    --stroke-color:  rgba(255, 255, 255, 0.50);
+    --surface-color: rgba(255, 255, 255, 0.1);
+    --surface-color-hover: rgba(0, 0, 0, 0.02);
+    --highlight-color: rgba(255, 255, 255, 0.2);
+    --switch-bg-url: url(./assets/moon-stars.svg)
+    
 }
 
 .light {
     --text-color: black;
     --bg-url: url(./assets/bg-mobile-light.jpg);
     --stroke-color:  rgba(0, 0, 0, 0.5);
+    --surface-color: rgba(0, 0, 0, 0.05);
+    --surface-color-hover: rgba(0, 0, 0, 0.02);
+    --highlight-color: rgba(0, 0, 0, 0.1);
+    --switch-bg-url: url(./assets/sun.svg)
     
 }
 
@@ -32,6 +41,8 @@ body * {
 
 }
 
+
+/*Profile*/
 #profile {
     text-align: center;
     padding: 24px;
@@ -49,6 +60,44 @@ body * {
     margin-top: 8px;
 }
 
+#switch {
+    position: relative;
+    width: 64px;
+
+    margin: 4px auto;
+}
+
+
+#switch button {
+    width: 32px;
+    height: 32px;
+    background: white var(--switch-bg-url) no-repeat center;
+    border: 0;
+    border-radius: 50%;
+
+    position: absolute;
+    top: 50%;
+    z-index: 1;
+    transform: translateY(-50%);
+
+}
+    
+.light #switch button {
+    right: 0;
+    left: initial
+}
+
+#switch span {
+    display: block;
+    width: 64px;
+    height: 24px;
+     background: var(--surface-color);
+    border: 1px solid var(--stroke-color);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    border-radius: 9999px;
+}
+
 /* links */
 ul {
     list-style: none;
@@ -59,8 +108,6 @@ ul {
 
     padding: 24px 0;
 
-    
-    
 }
 
 ul li a{
@@ -72,8 +119,8 @@ ul li a{
     padding: 16px  24px;
 
     border-radius: 8px;
-    border: 1px solid var(--stroke-color-dark-mode, rgba(255, 255, 255, 0.50));
-    background: var(--surface-color-dark-mode, rgba(255, 255, 255, 0.10));
+    border: 1px solid var(--stroke-color);
+    background: var(--surface-color);
 
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
@@ -86,7 +133,7 @@ ul li a{
 /* pseudo-selector*/
 
 ul li a:hover {
-    background: rgba(255, 255, 255, 5.05);
+    background: var(--surface-color-hover);
     border: 1.5px solid var(--text-color);
 }
 
@@ -112,8 +159,8 @@ ul li a:hover {
 }
 
 #social-links a:hover {
-    background: rgba(255, 255, 255, 0.2);
-    border-radius: 50%;
+    background: var(--highlight-color);
+    
 }
 
 footer {
