--- a/Style.css
+++ b/Style.css
@@ -36,9 +36,12 @@ body * {
 }
 
 #container{
-    width: 360px;
-    margin: 56px auto 0px; 
 
+    width: 100%;
+    max-width: 588px;
+    margin: 56px auto 0px; 
+    padding:  0 24px;
+    
 }
 
 
@@ -170,4 +173,9 @@ footer {
   
 }
 
+/* media queries */
+
+@media (min-width: 700px) {
+    
+}
  
