--- a/Style.css
+++ b/Style.css
@@ -6,7 +6,7 @@
 
 :root {
     --text-color: White;
-    --bg-url: url(./assets/bg-mobile.jpg);
+    --bg-url: url(./assets/bg-mobile.jpg); /*imagem de fundo tela pequena*/
     --stroke-color:  rgba(255, 255, 255, 0.50);
     --surface-color: rgba(255, 255, 255, 0.1);
     --surface-color-hover: rgba(0, 0, 0, 0.02);
@@ -17,7 +17,7 @@
 
 .light { 
     --text-color: black;
-    --bg-url: url(./assets/bg-mobile-light.jpg);
+    --bg-url: url(./assets/bg-mobile-light.jpg); /*imagem de fundo tela pequena*/
     --stroke-color:  rgba(0, 0, 0, 0.5);
     --surface-color: rgba(0, 0, 0, 0.05);
     --surface-color-hover: rgba(0, 0, 0, 0.02);
@@ -28,6 +28,7 @@
 
 body{
     background: var(--bg-url) no-repeat top center/cover;
+    height: 100vh;
 }
 
 body * {
@@ -80,21 +81,27 @@ body * {
 
     position: absolute;
     top: 50%;
+    left: 0;
     z-index: 1;
     transform: translateY(-50%);
 
+    animation: slide-back .2s;
 }
-    
+ 
+
 .light #switch button {
-    right: 0;
-    left: initial
+    animation: slide-in .2s forwards;
+}
+
+#switch button:hover {
+    outline: 8px solid var(--highlight-color);
 }
 
 #switch span {
     display: block;
     width: 64px;
     height: 24px;
-     background: var(--surface-color);
+    background: var(--surface-color);
     border: 1px solid var(--stroke-color);
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
@@ -176,6 +183,30 @@ footer {
 /* media queries */
 
 @media (min-width: 700px) {
-    
+ :root {
+    --bg-url: url(./assets/bg-desktop.jpg); /*imagem de fundo modo dark em tela grande*/
+ }
+
+ .light{
+    --bg-url: url(./assets/bg-desktop-light.jpg); /*imagem de fundo modo light em tela grande*/
+ }
 }
  
+/*Animatção do botão de alteração de tema*/
+@keyframes slide-in {
+    from {
+        left: 0;
+    }
+    to {
+        left: 50%;
+    }
+}
+
+@keyframes slide-back {
+    from{
+        left: 50%
+    }
+    to {
+        left: 0;
+    }
+}
